crates/rattler_package_streaming/src/reqwest/snapshots/rattler_package_streaming__reqwest__sparse__tests__fetch_package_file_sparse-2.snap
---
source: crates/rattler_package_streaming/src/reqwest/sparse.rs
assertion_line: 177
expression: about_json
---
channels:
  - "https://conda.anaconda.org/conda-forge/"
